troubleshooting layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ a{
     font-size: 1.8rem;
     font-weight: 600;
     margin: 1rem 0;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw;
     text-transform: uppercase;
     white-space: nowrap;
     text-align: center;
@@ -260,6 +260,7 @@ padding-right: 6rem;
     border: 0;
     flex-grow: 1;
     padding: 1.5rem 2rem;
+    width: 0;
 
 }
 .input-group .btn{
@@ -627,14 +628,15 @@ margin: 0 2rem;
     max-width: 670px;
 }
 .block-domain__prices {
-display: grid;
-grid-template-columns: repeat(3, 1fr);
-grid-template-rows: repeat(2, 6rem);
-font-size: 2rem;
-font-weight: 600;
-justify-items: center;
-max-width: 700px;
-margin: 0 auto;
+    color: var(--color-headings);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 6rem);
+    font-size: 2rem;
+    font-weight: 600;
+    justify-items: center;
+    max-width: 700px;
+    margin: 0 auto;
 }
 @media screen and (min-width: 768px) {
     .block-domain__prices {
